--- a/app.css
+++ b/app.css
@@ -25,6 +25,10 @@ input[type=radio]:checked+label {
     background: yellow;
 }
 
+label{
+    font-size: 1.5em;
+}
+
 input[type=submit] {
     padding: 5px;
     background: white;
