--- a/app.css
+++ b/app.css
@@ -18,15 +18,18 @@ input[type=radio] {
     text-align: left;
     margin: 10px;
     padding: 10px;
-    /*display: none;*/
+    display: none;
 }
 
 input[type=radio]:checked+label {
     background: yellow;
+    border-bottom: 2px dashed black;
+    /*border: solid;*/
 }
 
 label{
     font-size: 1.5em;
+    cursor: pointer;
 }
 
 input[type=submit] {
@@ -61,6 +64,7 @@ a {
 
 .option {
     display: block;
+    margin-top: 20px;
 }
 
 .results {
