Minimum Viable Product

--- a/app.css
+++ b/app.css
@@ -1,94 +1,7 @@
-body {
-    max-width: 100%;
-    height: auto;
+.year-button-selected {
+    font-weight: bold;
 }
 
-header {
-    text-align: center;
-}
-
-h1 {
-    font-size: 3em;
-    text-align: center;
-}
-
-form {
-    display: block;
-    margin-left: 20px;
-}
-
-input[type=radio] {
-    font-size: 3em;
-    text-align: left;
-    margin: 10px;
-    padding: 10px;
-}
-
-input[type=radio]:checked+label {
-}
-
-label{
-    font-size: 1.25em;
-    cursor: pointer;
-}
-
-input[type=submit] {
-    padding: 5px;
-    background: white;
-    border:1px solid;
-    cursor:pointer;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-    font-size: 1.5em;
-    font-family: inherit;
-}
-
-input[type=submit]:hover{
-    background: black;
-    color: white;
-}
-
-a {
-    display: block;
-    margin: 25px;
-    cursor: pointer;
-}
-
-.subtitle {
-    width: 60%;
-    margin: auto;
-}
-
-@media all and (min-width: 961px) {
-    .subtitle {
-        width: 600px;
-    }
-}
-
-.quiz {
-    margin: 30px;
-}
-
-.question {
-    margin-bottom: 40px;
-}
-
-.option {
-    display: block;
-    margin-top: 20px;
-}
-
-.results {
-    text-align: center;
-}
-
-.results img {
-    display: block;
-    margin: auto;
-}
-
-.error{
-    color: red;
-    display: none;
-    margin-top: 10px;
+.year-button-unselected {
+    font-size: smallest;
 }
